kubernetes/test-servers/server-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: server
  name: server
spec:
  containers:
  - command:
    - sleep
    - infinity
    image: drtuxwang/debian-bash:stable
    imagePullPolicy: IfNotPresent
    name: server
    ports:
    - containerPort: 80
      protocol: TCP
    resources:
      limits:
        cpu: 1000m
        memory: 1024M
      requests:
        cpu: 100m
        memory: 64M
    volumeMounts:
    - mountPath: /shared
      name: shared
  nodeSelector:
    beta.kubernetes.io/os: linux
    ##kubernetes.io/hostname: koko.local
  restartPolicy: Never
  volumes:
  - hostPath:
      path: /shared
    name: shared
