kubernetes/test-servers/servers-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: server
  name: server
spec:
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - command:
        - sleep
        - infinity
        image: drtuxwang/debian-bash:stable
        imagePullPolicy: IfNotPresent
        name: server
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 1000m
            memory: 1024M
          requests:
            cpu: 100m
            memory: 64M
        volumeMounts:
        - mountPath: /shared
          name: shared
      nodeSelector:
        beta.kubernetes.io/os: linux
        ##kubernetes.io/hostname: koko.local
      terminationGracePeriodSeconds: 10
      volumes:
      - hostPath:
          path: /shared
        name: shared
