kubernetes/test-servers/servers-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server
spec:
  rules:
  - host: server.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: server
          servicePort: 80
  tls:
  - secretName: example.com
